feat: authorization and authentication with endpoints. setclaims completed
